[gd_scene load_steps=3 format=3 uid="uid://duftq3cbdmthb"]

[ext_resource type="Script" path="res://scenes/map_tile.gd" id="1_ltan8"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_v666k"]
size = Vector2(126, 126)

[node name="MapTile" type="Node2D"]
script = ExtResource("1_ltan8")

[node name="TileSprite" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_v666k")

[node name="HighlightSprite" type="Sprite2D" parent="."]
visible = false
